--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "VTK"]
 	path = VTK
-  url = https://gitlab.kitware.com/vtk/vtk.git
+  url = https://github.com/Perception4D/VTK.git
   branch = paraview/release
 [submodule "Utilities/VisItBridge"]
 	path = Utilities/VisItBridge
